# armature

./: .gitignore  CLAUDE.md  CODEOWNERS  Cargo.toml  LICENSE  Makefile  README copy.md  README.md  ROADMAP.md  deploy.yml  docker-compose.dev.yml  docker-compose.yml  entry.sh  package.json  run.md  rust-toolchain.toml
.cortex/: changelog.md  manifest.yaml  overview.md
.github/: copilot-instructions.md
.github/workflows/: cortex-ingest.yml  deploy_new.yml  pr.yml
api/: Dockerfile  eslint.config.mjs  package.json  tsconfig.json  tsconfig.tsbuildinfo
api/src/: index.ts
crates/indexer/: Cargo.toml
crates/indexer/src/: api.rs  lib.rs  main.rs  models.rs  traits.rs
crates/indexer/src/handlers/: activity_handler.rs  dao_handler.rs  emergency_handler.rs  example_handler.rs  mod.rs  proposal_handler.rs  treasury_handler.rs  vote_handler.rs
crates/schema/: Cargo.toml
crates/schema/migrations/00000000000000_initial/: up.sql
crates/schema/migrations/20260319000000_armature_tables/: down.sql  up.sql
crates/schema/migrations/20260320000000_votes_and_freeze/: down.sql  up.sql
crates/schema/src/: models.rs  schema.rs
docker/: .env.example  Dockerfile.indexer  Dockerfile.sui-deploy
docker/indexer/: Dockerfile
docker/scripts/: deploy-armature.sh  deploy-world.sh  run-indexer.sh  wait-for-rpc.sh
docs/: indexing_board_events.md  local-dev.md  proposal-types.md  single-vote-execute.md  tribe-creation.md  tribe_configuration_proposals_config.md  unify_invocation.md  unify_invocation_impl.md  unify_invocation_review.md
proposals/: ADR_COMPOSABLE_PROPOSALS.md  ADR_GOVERNANCE_TYPE_DELAY_DEFAULTS.md  ADR_SUBMISSION_TIME_FLOOR_ENFORCEMENT.md  ADR_SUBMIT_VOTE_EXECUTE.md  ENCRYPTED_TRIBE_DESIGN.md  TRIBE_DAO_STRUCTURE.md
scripts/: localnet-setup.mjs  localnet-setup.sh
specs/: 00_index.md  01_vision.md  02_demo_flows.md  03_core_spec.md  04_subdao_hierarchy.md  05_charter.md  06_data_layer.md  06_security.md  07_roadmap.md  08_stretch_features.md  09_issue_breakdown.md  10_formal_verification.md
specs/stretch/: 00_index.md  01_federation.md  02_governance_models.md  03_migration.md  04_project_funding.md  05_advanced_proposals.md  06_eve_infrastructure.md  07_lateral_composition.md  08_user_stories.md  09_proposal_composition.md  09_proposal_composition_design.md  10_charter_parametrization.md  11_open_proposal_type_set.md
specs/tests/: 00_conventions.md  01_test_helpers.md  02_dao_lifecycle.md  03_governance.md  04_proposals.md  05_treasury.md  06_capability_vault.md  07_charter.md  08_emergency.md  09_board_voting.md  10_admin_proposals.md  11_treasury_ops.md  12_board_ops.md  13_subdao_ops.md  14_charter_ops.md  15_privileged_submit.md  16_integration_flows.md  17_coverage_summary.md
specs/ui/: 00_overview.md  01_proposal_lifecycle.md  02_core_pages.md  03_proposal_forms.md  04_payload_summaries.md  (+2 more)
ui/: .env.local.example  .env.testnet  Caddyfile  Dockerfile  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.integration.config.ts
whitepaper/: main.typ
(+159 files in other folders)
