[package]
name = "armature-schema"
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
sui-field-count = { git = "https://github.com/MystenLabs/sui.git", rev = "072a2111619715c3348d1b83c0526c3bcfa5cdd1" }
diesel = { workspace = true, features = ["postgres", "uuid", "chrono", "serde_json", "numeric"] }
diesel_migrations.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal.workspace = true
